--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint --fix .",
-    "generate-mocks": "node MOCKS/generateMocks.mjs && npm run lint"
+    "generate-mocks": "node MOCKS/generateMocks.mjs && npm run lint",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
@@ -25,6 +26,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-tailwindcss": "^3.8.3",
     "eslint-plugin-vue": "^9.9.0",
+    "husky": "^8.0.3",
     "nuxt": "^3.2.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
