--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "eslint-plugin-tailwindcss": "^3.8.3",
     "eslint-plugin-vue": "^9.9.0",
     "husky": "^8.0.3",
-    "nuxt": "^3.2.0",
+    "nuxt": "npm:nuxt3@latest",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.2",
+    "prisma": "^4.10.1",
     "tailwindcss": "^3.2.6",
     "typescript": "^4.9.5"
   },
@@ -38,10 +39,12 @@
     "@apollo/server": "^4.4.0",
     "@as-integrations/h3": "^1.1.5",
     "@nuxtjs/apollo": "^5.0.0-alpha.5",
+    "@prisma/client": "^4.10.1",
     "@rushstack/eslint-patch": "^1.2.0",
     "@vue/eslint-config-airbnb": "^7.0.0",
     "eslint-plugin-sort-exports": "^0.8.0",
     "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "nuxt-graphql-server": "^1.1.5"
   }
 }
